Update dependencies & remove deprecated methods (#26)